--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ body {
 .glass-card {
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
+  border-radius: 5%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   color: #fff;
 }
